using new gcc toolchain

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: cpp
 sudo: required
 distribution: trusty
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-6
+      - g++-6
+
 os:
 - linux
 - osx
@@ -22,6 +31,10 @@ compiler:
 # sudo ./install.sh
 
 script:
+- sudo ln -s /usr/bin/gcc-6 
+/usr/local/bin/gcc
+- sudo ln -s /usr/bin/g++-6 
+/usr/local/bin/g++
 - cmake . 
 - make clean
 - make
