--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ compiler:
 - gcc
 - clang
 
+before_install:
+- export LD_LIBRARY_PATH=/usr/local/clang/lib:$LD_LIBRARY_PATH
+
 script:
 - sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
 - sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
