--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,11 @@ before_install:
 script:
 - sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
 - sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
+- wget https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.tar.bz2
+- tar xzf boost_1_69_0.tar.bz2
+- cd boost_1_69_0.tar.bz2
+- sudo cp boost/ /usr/local/include
+- cd ..
 - cd build
 - cmake -DCMAKE_BUILD_TYPE=Release ..
 - make clean
