--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - boost-latest
+      #- boost-latest
     packages:
       - gcc-6
       - g++-6
-      - libboost-all-dev
+      #- libboost-all-dev
 
 
 os:
@@ -36,6 +36,9 @@ before_install:
 script:
 - sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
 - sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
+- wget https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.tar.gz
+- tar -zxvf boost_1_69_0.tar.gz
+- sudo cp ./boost_1_69_0/boost /usr/local/include/
 - cd build
 - cmake -DCMAKE_BUILD_TYPE=Release ..
 - make clean
