--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
 - sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
 - sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
 - wget https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.tar.gz
-- tar -zxvf boost_1_69_0.tar.gz
+- tar -zxf boost_1_69_0.tar.gz
 - sudo cp ./boost_1_69_0/boost /usr/local/include/
 - cd build
 - cmake -DCMAKE_BUILD_TYPE=Release ..
